--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -15,20 +15,20 @@
 <h1>Assignment Home Page</h1>
 <div class="container">
   <nav>
-  <ul><a href="views/user/login.html">                login.html                </a></ul>
-  <ul><a href="views/page/page-edit.html">            page-edit.html            </a></ul>
-  <ul><a href="views/page/page-list.html">            page-list.html            </a></ul>
-  <ul><a href="views/page/page-new.html">             page-new.html             </a></ul>
-  <ul><a href="views/user/profile.html">              profile.html              </a></ul>
-  <ul><a href="views/user/register.html">             register.html             </a></ul>
-  <ul><a href="views/website/website-edit.html">      website-edit.html         </a></ul>
-  <ul><a href="views/website/website-list.html">      website-list.html         </a></ul>
-  <ul><a href="views/website/website-new.html">       website-new.html          </a></ul>
-  <ul><a href="views/widget/widget-chooser.html">      widget-chooser.html        </a></ul>
-  <ul><a href="views/widget/widget-heading.html">     widget-heading.html       </a></ul>
-  <ul><a href="views/widget/widget-image.html">       widget-image.html         </a></ul>
-  <ul><a href="views/widget/widget-list.html">        widget-list.html          </a></ul>
-  <ul><a href="views/widget/widget-youtube.html">     widget-youtube.html       </a></ul>
+  <ul><a href="views/user/login.html">                Login                </a></ul>
+  <ul><a href="views/page/page-edit.html">            Edit Page            </a></ul>
+  <ul><a href="views/page/page-list.html">            Page List            </a></ul>
+  <ul><a href="views/page/page-new.html">             New Page             </a></ul>
+  <ul><a href="views/user/profile.html">              Profile              </a></ul>
+  <ul><a href="views/user/register.html">             Register             </a></ul>
+  <ul><a href="views/website/website-edit.html">      Edit Website         </a></ul>
+  <ul><a href="views/website/website-list.html">      Website List         </a></ul>
+  <ul><a href="views/website/website-new.html">       New Website          </a></ul>
+  <ul><a href="views/widget/widget-chooser.html">     Choose Widget        </a></ul>
+  <ul><a href="views/widget/widget-heading.html">     Widget Heading       </a></ul>
+  <ul><a href="views/widget/widget-image.html">       Widget Image         </a></ul>
+  <ul><a href="views/widget/widget-list.html">        Widget List          </a></ul>
+  <ul><a href="views/widget/widget-youtube.html">     Wideget YouTube       </a></ul>
   </nav>
 </div>
 </body>
