--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <h1>Assignment Home Page</h1>
-<div class="container">
+<div class="container-fluid">
   <nav>
   <ul><a href="views/user/login.html">                Login                </a></ul>
   <ul><a href="views/page/page-edit.html">            Edit Page            </a></ul>
