--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -9,6 +9,7 @@
   <meta charset="UTF-8">
   <title>Index</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="../assets/css/style.css"/>
   <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
 </head>
 <body>
@@ -28,7 +29,7 @@
   <ul><a href="views/widget/widget-heading.html">     Widget Heading       </a></ul>
   <ul><a href="views/widget/widget-image.html">       Widget Image         </a></ul>
   <ul><a href="views/widget/widget-list.html">        Widget List          </a></ul>
-  <ul><a href="views/widget/widget-youtube.html">     Wideget YouTube       </a></ul>
+  <ul><a href="views/widget/widget-youtube.html">     Widget YouTube       </a></ul>
   </nav>
 </div>
 </body>
