--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="assets/vendors/jquery/jquery-ui.min.css"/>
   <script src="assets/vendors/jquery/jquery.js"></script>
-  <!--<script src="assets/vendors/jquery/jquery-ui.js"></script>-->
-  <!--<link href="assets/vendors/jquery/jquery-ui.min.css"/>-->
+  <script src="assets/vendors/jquery/jquery-ui.min.js"></script>
+
 
 
 </head>
